feat: 댓글 삭제 테스트 구현